# deepchem

./: .gitignore  .keras.json  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  .travis.yml  .yapfignore  22_Transfer_Learning_With_ChemBERTa_Transformers.ipynb  22_Transfer_Learning_With_HuggingFace_tox21.ipynb  23_Transfer_Learning_With_ChemBERTa_Transformers_Pt_2.ipynb  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Demonstrating_neuralode_api.ipynb  Dockerfile  LICENSE  Large_Scale_Chemical_Screens.ipynb  MANIFEST.in  Mask.ipynb  Mask.py  PUBLICATIONS.md  Physics_Informed_Neural_Networks.ipynb  README.md  README.md,v  SUPPORTERS.md  Writing_Tutorial.ipynb  \deepchem\examples\tutorials\Visualizing_Masking_For_Token_Prediction  \examples\tutorials\Visualizing_Masking_For_Token_Prediction.ipynb  ai-enhanced-data-processing.py  auto_update_featurizer.py  bulk_update_featurizer.py  data-maker.py  data_processor.py  delaney_dag_valid.py  delaney_graphconv_valid.py  env.common.yml  env.cpu.mac.yml  env.cpu.yml  env.gpu.yml  (+19 more)
.codeboarding/: Data Pipeline.md  Experimentation & Evaluation.md  Model Core & Training Frameworks.md  Molecular & Chemoinformatics Utilities.md  Specialized Model Architectures.md  on_boarding.md
.github/: CONTRIBUTING.md  MOLNET_PR_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.ipynb_checkpoints/: code_test-checkpoint.ipynb
contrib/diffem/: DeepChemNotebook.ipynb  README.md  pyproject.toml  requirements.txt
contrib/diffem/diffem/: __init__.py  assembler.py  mesh.py  mesh_generator.py  model.py  reference_element.py  solver.py
contrib/diffem/scripts/: benchmark_scipy.py  convergence_study.py  demo_deepchem.py  differentiability_tests.py  forward_solve.py
contrib/diffem/tests/: test_diffem.py
datasets/: .gitignore  Positive Modulators Summary_ 918.TUC _ v1.xlsx  construct_pdbbind_df.py  core_smiles_labels.csv  crystal_desc_canvas_aug30.csv  desc_canvas_aug30.csv  full_smiles_labels.csv  gdb1k.sdf  gdb1k.sdf.csv  gdb1k_with_atomization_energy.sdf  membrane_permeability.sdf  membrane_permeability.sdf.csv  pKa-A1.csv  pKa-B1.csv  pdbbind_year.csv  refined_smiles_labels.csv  thermosol.csv  tox21.csv
dc-env/: pyvenv.cfg
deep_chem-master/: LICENSE  README.md  env.common.yml
deep_chem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
deepchem/: .gitignore  __init__.py  task_demo.py  test.ipynb
deepchem-dev/: pyvenv.cfg
devtools/: README.md  run_docs_build.sh  run_doctest.sh  run_flake8.sh  run_format_code.sh  run_yapf.sh
docs/: .gitignore  =1.0  MNIST.md  Makefile  PDBBIND.md  README.md  applications.rst  coding.rst  complex.html  conf.py  dataclasses.rst  dataloaders.rst  datasets.rst  deepchem.featurizers.rst  deepchem.models.rst  deepchem.rst  deepchem.scripts.rst  deepchem.utils.rst  deepchem.utils.test.rst  examples.rst  featurization.rst  featurizers.rst  hyper.rst  index.md  index.rst  infra.rst  input.rst  installation.rst  keras.rst  layers.rst  metrics.rst  models.rst  modules.rst  moleculenet.rst  molnet_pr_template.md  old_conf.py  requirements.rst  requirements.txt  scientists.rst  solubility.html  (+7 more)
examples/: ._pdbbind_nnscore.py  .qm_user-defined.py.swp  12_Predicting_Ki_of_Ligands_to_a_Protein.ipynb  BACE.ipynb  Benchmark.py  GPhyperparameterOptimization.py  HuggingFace LLM Example.ipynb  Multitask Networks on MUV.ipynb  README.md  README_LLM.md  bace_cgraphconv.pkl  bace_cirv.pkl  bace_ckernelsvm.pkl  bace_clogreg.pkl  bace_crf.pkl  bace_ctf.pkl  bace_ctf_robust.pkl  bace_cweave.pkl  bace_cxgb.pkl  bbbpgraphconv.pkl  bbbpirv.pkl  bbbpkernelsvm.pkl  bbbplogreg.pkl  bbbprf.pkl  bbbptf.pkl  bbbptf_robust.pkl  bbbpweave.pkl  bbbpxgb.pkl  benchmark.py  benchmark2.py  benchmark_10.py  benchmark_20.py  benchmark_curve.py  benchmark_hyperparam_search.py  benchmark_low_data.py  benchmark_variable.py  benchmark_xgboost.py  best_results.csv  cath_dataset_usage.py  clintoxgraphconv.pkl  (+152 more)
notes/: relaease.md  release.md
requirements/: README.md  docs.yml  env_common.yml  env_common_3_8.yml  env_dqc.yml  env_mac.yml  env_mac_3_11.yml  env_mac_arm64.yml  env_py310_no_support.yml  env_test.yml  env_ubuntu.yml  env_ubuntu_3_11.yml  env_xitorch.yml
scripts/: benchmark_symbolic_comparison.py  colab_install.py  controller.sh  deepchem_benchmark.py  detect_devices.py  dock_dude.py  dock_dude_script.py  docking_pipeline.py  download_data.sh  engine.sh  featurize_pdbbind.py  flake8_for_ci.bash  flake8_for_ci.sh  framework_list.sh  install_deepchem_conda.bash  install_deepchem_conda.ps1  install_deepchem_conda.sh  install_miniconda.bash  mypy_doctest.sh  pbs_controller.sh  rl_deepchem.py  run_engines_single.sh  tf_upgrade.py  validate_rfdiffusion.py  (+3 more)
(+9588 files in other folders)
