[metadata]
name = deepchem
author = Bharath Ramsundar, Evan Feinberg, Pande Lab Stanford
summary = Deep-learning models for drug discovery and quantum chemistry
description-file = README.md
home-page = https://github.com/pandegroup/deepchem
license = MIT
version = 1.3.2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
keywords =
    setup
    distutils
[files]
packages =
    deepchem
