[metadata]
name = deepchem
author = DeepChem contributors 
summary = Deep-learning models for drug discovery, quantum chemistry, and the life sciences.
home-page = https://github.com/deepchem/deepchem
license = MIT
version = 2.2.1
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
keywords =
    setup
    distutils
[files]
packages =
    deepchem
